// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays loading if we are fetching the timepoints 1`] = `
<div
  className="m-route-ladder"
>
  <div
    className="m-route-ladder__header"
  >
    <button
      className="m-close-button"
      onClick={[Function]}
    >
      <span
        className="m-close-button__icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
    <div
      className="m-route-ladder__route-name"
    >
      28
    </div>
  </div>
  <button
    className="m-route-ladder__reverse"
    onClick={[Function]}
  >
    <span
      className="m-route-ladder__reverse-icon"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
    Reverse
  </button>
  loading...
</div>
`;

exports[`renders a route ladder 1`] = `
<div
  className="m-route-ladder"
>
  <div
    className="m-route-ladder__header"
  >
    <button
      className="m-close-button"
      onClick={[Function]}
    >
      <span
        className="m-close-button__icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
    <div
      className="m-route-ladder__route-name"
    >
      28
    </div>
  </div>
  <button
    className="m-route-ladder__reverse"
    onClick={[Function]}
  >
    <span
      className="m-route-ladder__reverse-icon"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
    Reverse
  </button>
  <svg
    className="m-ladder"
    height={500}
    viewBox="-90 -40 180 500"
    width={180}
  >
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={420}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={420}
    />
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={0}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={0}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={0}
    >
      MATPN
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={210}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={210}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={210}
    >
      WELLH
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={420}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={420}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={420}
    >
      MORTN
    </text>
  </svg>
</div>
`;

exports[`renders a route ladder with vehicles 1`] = `
<div
  className="m-route-ladder"
>
  <div
    className="m-route-ladder__header"
  >
    <button
      className="m-close-button"
      onClick={[Function]}
    >
      <span
        className="m-close-button__icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
    <div
      className="m-route-ladder__route-name"
    >
      28
    </div>
  </div>
  <button
    className="m-route-ladder__reverse"
    onClick={[Function]}
  >
    <span
      className="m-route-ladder__reverse-icon"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
    Reverse
  </button>
  <svg
    className="m-ladder"
    height={500}
    viewBox="-90 -40 180 500"
    width={180}
  >
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={420}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={420}
    />
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={0}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={0}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={0}
    >
      MATPN
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={210}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={210}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={210}
    >
      WELLH
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={420}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={420}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={420}
    >
      MORTN
    </text>
    <g
      className="m-ladder__vehicle"
      onClick={[Function]}
    >
      <polygon
        className="m-ladder__vehicle-triangle "
        points="60,95 45,115 75,115"
      />
      <text
        className="m-ladder__vehicle-label"
        dominantBaseline="middle"
        textAnchor="middle"
        x={60}
        y={123}
      >
        1818
      </text>
    </g>
    <g
      className="m-ladder__vehicle"
      onClick={[Function]}
    >
      <polygon
        className="m-ladder__vehicle-triangle "
        points="-60,430 -45,410 -75,410"
      />
      <text
        className="m-ladder__vehicle-label"
        dominantBaseline="middle"
        textAnchor="middle"
        x={-60}
        y={405}
      >
        0479
      </text>
    </g>
  </svg>
  <ul
    className="m-route-ladder__vehicle"
    onClick={[Function]}
    style={
      Object {
        "border": "1px solid black",
      }
    }
  >
    <li>
      <em>
        id:
      </em>
       
      y1818
    </li>
    <li>
      <em>
        label:
      </em>
       
      1818
    </li>
    <li>
      <em>
        timestamp:
      </em>
       
      1557160307
    </li>
    <li>
      <em>
        latitude:
      </em>
       
      0
    </li>
    <li>
      <em>
        longitude:
      </em>
       
      0
    </li>
    <li>
      <em>
        direction_id:
      </em>
       
      0
    </li>
    <li>
      <em>
        route_id:
      </em>
       
      1
    </li>
    <li>
      <em>
        trip_id:
      </em>
       
      39914237
    </li>
    <li>
      <em>
        stop status:
      </em>
       
      in_transit_to
      ,
      <br />
      <em>
        stop:
      </em>
       
      57
    </li>
    <li>
      <em>
        timepoint status:
      </em>
       
      in_transit_to
      ,
      <br />
      <em>
        timepoint:
      </em>
       
      MATPN
      ,
      <br />
      <em>
        fraction before:
      </em>
       
      0.5
    </li>
  </ul>
  <ul
    className="m-route-ladder__vehicle"
    onClick={[Function]}
    style={
      Object {
        "border": "1px solid black",
      }
    }
  >
    <li>
      <em>
        id:
      </em>
       
      y0479
    </li>
    <li>
      <em>
        label:
      </em>
       
      0479
    </li>
    <li>
      <em>
        timestamp:
      </em>
       
      1557160347
    </li>
    <li>
      <em>
        latitude:
      </em>
       
      0
    </li>
    <li>
      <em>
        longitude:
      </em>
       
      0
    </li>
    <li>
      <em>
        direction_id:
      </em>
       
      1
    </li>
    <li>
      <em>
        route_id:
      </em>
       
      1
    </li>
    <li>
      <em>
        trip_id:
      </em>
       
      39914128
    </li>
    <li>
      <em>
        stop status:
      </em>
       
      in_transit_to
      ,
      <br />
      <em>
        stop:
      </em>
       
      59
    </li>
    <li>
      <em>
        timepoint status:
      </em>
       
      in_transit_to
      ,
      <br />
      <em>
        timepoint:
      </em>
       
      MORTN
      ,
      <br />
      <em>
        fraction before:
      </em>
       
      0
    </li>
  </ul>
</div>
`;
